--- a/Binarios/ResBinario.WebAdmin/ResBinario.WebAdmin.csproj
+++ b/Binarios/ResBinario.WebAdmin/ResBinario.WebAdmin.csproj
@@ -164,6 +164,7 @@
     <Content Include="scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Productos\Index.cshtml" />
     <Content Include="Views\Productos\Crear.cshtml" />
+    <Content Include="Views\Productos\Editar.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
